#fix width scrollbar

--- a/local/templates/newsmile/erp_frontend/src/components/Header/Notifications/Notifications.scss
+++ b/local/templates/newsmile/erp_frontend/src/components/Header/Notifications/Notifications.scss
@@ -10,6 +10,7 @@
 .scrolltst {
   .thumb {
     background: rgba(255,255,255,0.2) !important;
+    width: 4px !important;
 
     &:hover {
       background: #fff !important;
